<!--
  ~ Copyright 2020 BDK Team
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <!--High-level app strings-->
    <string name="logo_desc">logo</string>
    <string name="title_balance">Balance</string>
    <string name="title_deposit">Deposit</string>
    <string name="title_withdraw">Withdraw</string>
    <string name="title_init">Init</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--Buttons-->
    <string name="create_wallet_btn">Create Wallet</string>
    <string name="create_btn">Create</string>
    <string name="set_password_btn">Set Password</string>
    <string name="recover_wallet_btn">Recover Wallet</string>
    <string name="recover_btn">Recover</string>
    <string name="review_btn">Review Payment</string>
    <string name="ok_btn">OK</string>
    <string name="history_btn">Transaction History</string>
    <string name="back_btn">BACK</string>
    <string name="share_btn">Share</string>
    <string name="continue_btn">CONTINUE</string>
    <string name="send_btn">SEND</string>

    <!--Wallet recovery/init-->
    <string name="seed_index_1">1.</string>
    <string name="seed_index_2">2.</string>
    <string name="seed_index_3">3.</string>
    <string name="seed_index_4">4.</string>
    <string name="seed_index_5">5.</string>
    <string name="seed_index_6">6.</string>
    <string name="seed_index_7">7.</string>
    <string name="seed_index_8">8.</string>
    <string name="seed_index_9">9.</string>
    <string name="seed_index_10">10.</string>
    <string name="seed_index_11">11.</string>
    <string name="seed_index_12">12.</string>
    <string name="btc_units">BTC</string>
    <string name="sat_units">SAT</string>
    <string name="init_inst">Write down your twelve wallet seed words and click OK when done. This is the only time you will be shown these words.</string>
    <string name="prompt_password">Enter Wallet password</string>
    <string name="prompt_create_password">Create password</string>
    <string name="prompt_conf_password">Confirm password</string>
    <string name="create_wallet_subtitle">Your seed recovery phrase:</string>
    <string name="recover_wallet_subtitle">Enter your seed recovery phrase:</string>
    <string name="login_failed">Invalid password</string>
    <string name="powered_by">POWERED BY</string>
    <string name="init_dialog_title">Welcome!</string>
    <string name="replaceable_seed_word">XXXXX</string>
    <string name="init_dialog_body">If you\'ve already created a wallet and have your seed phrase on-hand, select recover wallet.</string>
    <string name="reminder_dialog_title">Reminder</string>
    <string name="reminder_dialog_body">You will not be given this phrase again!</string>
    <string name="reminder_dialog_btn">I\'ve written it down</string>
    <string name="backup_dialog_title">Backup Your Wallet</string>
    <string name="backup_dialog_body">Your seed phrase can be used to recover your wallet. It will only be given to you once, so write it down in-order on a piece of paper (we do not recommend saving your phrase as a digital copy anywhere).</string>
    <string name="toast_invalid_password">Password must be 8–20 characters</string>

    <!--Withdraw fragment-->
    <string name="prompt_address">Recipient address</string>
    <string name="prompt_amount">Amount (BTC)</string>
    <string name="prompt_password_send">Wallet password</string>
    <string name="replaceable_price_review">X.XXXXX BTC ($XX,XXX.XX USD)</string>
    <string name="replaceable_fee_review">X.XXXXX BTC (X.XXX%)</string>
    <string name="toast_password_match">Passwords do not match</string>
    <string name="toast_invalid_seed_phrase">Invalid seed phrase</string>
    <string name="toast_invalid_address">Invalid recipient address</string>
    <string name="toast_insufficient_balance">Insufficient wallet balance</string>
    <string name="toast_invalid_amount">Invalid amount value</string>
    <string name="payment_dialog_title">Payment Review</string>
    <string name="payment_dialog_recipient">Recipient:</string>
    <string name="payment_dialog_amount">Amount:</string>
    <string name="payment_dialog_fee">Network fee:</string>
    <string name="payment_dialog_total">Total withdrawal:</string>

    <!--Deposit fragment-->
    <string name="address_subtitle">YOUR WALLET ADDRESS:</string>
    <string name="replaceable_address">2N6wxZpsMdehgvVAPkasFDoyMySXbU7SHkP</string>
    <string name="share_address_extra">Deposit Address</string>
    <string name="share_address_extra_title">Share Deposit Address</string>

    <!--Balance fragment-->
    <string name="replaceable_price">$XX,XXX.XX</string>
    <string name="replaceable_balance">X.XXXXX</string>
    <string name="balance_sat_label">SAT BALANCE</string>
    <string name="balance_btc_label">BTC BALANCE</string>
    <string name="price_btc_label">BTC PRICE</string>
    <string name="balance_usd_label">USD VALUE</string>
    <string name="btc_high_label">HIGH</string>
    <string name="btc_low_label">LOW</string>
    <string name="btc_volume_label">VOLUME</string>

    <!--History activity-->
    <string name="history_empty_title">NOTHING HERE!</string>
    <string name="history_empty_body">Your future transactions will display here.</string>
    <string name="replaceable_balance_btc">X.XXXXX BTC</string>
    <string name="replaceable_time">XX:XX XM</string>
    <string name="replaceable_date">XXXXXXXX XX, 20XX</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

    <!-- Setting Preferences -->
    <string name="display_btc_as_sat">Display BTC as SAT</string>
    <string name="title_settings">Settings</string>
</resources>
