<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/bdk-logo"
        android:layout_width="114dp"
        android:layout_height="99dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bdk_logo" />

    <TextView
        android:id="@+id/poweredby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="24dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/powered_by"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/bdk-logo"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/welcome-title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="13dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/init_dialog_title"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/welcome-body"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/poweredby" />

    <TextView
        android:id="@+id/welcome-body"
        android:layout_width="276dp"
        android:layout_height="84dp"
        android:layout_marginEnd="36dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/init_dialog_body"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/dismiss"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/dismiss"
        android:layout_width="122dp"
        android:layout_height="29dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:fontFamily="@font/roboto_bold"
        android:lineSpacingExtra="5sp"
        android:text="@string/continue_btn"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>