<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="380dp"
    android:layout_height="380dp">

    <ImageView
        android:id="@+id/horizontal_divider"
        android:layout_width="250dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:contentDescription="@string/logo_desc"
        android:src="@drawable/dark_blue_rectangle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fee_label" />

    <ImageView
        android:id="@+id/title_background_rectangle"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/medium_blue_rectangle" />

    <TextView
        android:id="@+id/review_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/roboto_medium"
        android:text="@string/payment_dialog_title"
        android:textColor="@color/white"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/recipient_label"
        android:layout_width="73dp"
        android:layout_height="27dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="268dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/payment_dialog_recipient"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_background_rectangle" />

    <TextView
        android:id="@+id/recipient_text"
        android:layout_width="199dp"
        android:layout_height="38dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/replaceable_address"
        android:textAlignment="textStart"
        android:textColor="@color/darkBlue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_background_rectangle" />

    <TextView
        android:id="@+id/amount_text"
        android:layout_width="237dp"
        android:layout_height="31dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="23dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/replaceable_price_review"
        android:textAlignment="textStart"
        android:textColor="@color/darkBlue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipient_text" />

    <TextView
        android:id="@+id/amount_label"
        android:layout_width="75dp"
        android:layout_height="29dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="268dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/payment_dialog_amount"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_background_rectangle" />

    <TextView
        android:id="@+id/fee_text"
        android:layout_width="237dp"
        android:layout_height="31dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/replaceable_fee_review"
        android:textAlignment="textStart"
        android:textColor="@color/darkBlue"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_text" />

    <TextView
        android:id="@+id/fee_label"
        android:layout_width="96dp"
        android:layout_height="27dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="132dp"
        android:layout_marginEnd="268dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/payment_dialog_fee"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_background_rectangle" />

    <TextView
        android:id="@+id/total_text"
        android:layout_width="237dp"
        android:layout_height="31dp"
        android:layout_marginStart="128dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/roboto_medium"
        android:lineSpacingExtra="5sp"
        android:text="@string/replaceable_price_review"
        android:textAlignment="textStart"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontal_divider" />

    <TextView
        android:id="@+id/total_label"
        android:layout_width="118dp"
        android:layout_height="33dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="204dp"
        android:layout_marginEnd="268dp"
        android:fontFamily="@font/roboto"
        android:lineSpacingExtra="5sp"
        android:text="@string/payment_dialog_total"
        android:textAlignment="textStart"
        android:textColor="@android:color/darker_gray"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_background_rectangle" />

    <TextView
        android:id="@+id/back_btn_text"
        android:layout_width="94dp"
        android:layout_height="22dp"
        android:layout_marginEnd="140dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto_bold"
        android:lineSpacingExtra="5sp"
        android:text="@string/back_btn"
        android:textAlignment="center"
        android:textColor="@color/darkGray"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/send_btn_text"
        android:layout_width="96dp"
        android:layout_height="23dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="28dp"
        android:fontFamily="@font/roboto_bold"
        android:lineSpacingExtra="5sp"
        android:text="@string/send_btn"
        android:textAlignment="center"
        android:textColor="@color/darkBlue"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/btc_logo"
        android:layout_width="69dp"
        android:layout_height="61dp"
        android:layout_marginStart="7dp"
        android:layout_marginTop="7dp"
        android:contentDescription="@string/logo_desc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title_background_rectangle"
        app:srcCompat="@drawable/bitcoin_white" />

</androidx.constraintlayout.widget.ConstraintLayout>